discussion/kv_engine/175322/175322_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Allow client to request an exclusive range

Providing an exclusive range option allows a simpler 'resume' flow
for clients, allowing them to use their last-received key as the
start, the scan can resume from the next key.

Note commit adds a exclusive end option for completeness.

Both "excl_start" and "excl_end" are now allowed keys in the "range"
object enabling the request.

Change-Id: I0a162830d690de5c6bc50e9817596231f0b0f727

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-07 14:31:59.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-06-07 14:39:10.000000000
Message: 
Patch Set 6:

(3 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-06-07 14:59:41.000000000
Message: 
Patch Set 6: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-07 15:11:55.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46650/ : FAILURE

Failure of GoogleTest "TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "Failed to mutateWithMeta TransportProtocols_GetSetTest_ServerRejectsLargeSizeWithXattrCompressed_McbpSsl_XattrYes_JsonYes_SnappyYes : Temporary failure (134)" thrown in the test body.
[  FAILED  ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (178 ms)
TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46650/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17966/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/range_scan_create_executor.cc:111:17: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
                fmt::format("range included both {} and {}", key, eKey));
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/range_scan_create_executor.cc:115:17: error: use of undeclared identifier "fmt" [clang-diagnostic-error]
                fmt::format("range did not include {} or {}", key, eKey));
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17966/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/range_scan_create_executor.cc:111:17:
error: use of undeclared identifier "fmt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17966/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39208/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/range_scan_create_executor.cc:111:17:
error: use of undeclared identifier "fmt"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39208/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39208/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17020/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18997/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7622/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7726/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20148/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19801/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20804/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28195/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
